infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: lifeos
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: ghcr.io/poornesh12/life_os-client:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
